--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS</title>
 </head>
+<style>
+    #heading{
+        text-align: center;
+        text-transform: capitalize;
+    }
+</style>
 <body>
-    <h1>Javascript</h1>
+    <h1 id="heading">Java script</h1>
     <script src="app.js"></script>
 </body>
 </html>
